# presto

./: pom.xml
.devcontainer/: Dockerfile  devcontainer.json
presto-delta/: pom.xml
presto-denodo-arrow-flight/: pom.xml
presto-denodo-arrow-flight/src/main/assembly/: denodo.xml
presto-hive/: pom.xml
presto-hudi/: pom.xml
presto-main/etc/: config.properties  jvm.config
presto-main/etc/catalog/: denodo-arrow.properties  denodo.properties  tpcds.properties
presto-native-execution/: docker-compose.yml
presto-native-execution/.devcontainer/: Dockerfile  devcontainer.json
presto-native-execution/etc/: config.properties  node.properties
presto-native-execution/etc/catalog/: denodo-arrow.properties
presto-native-execution/presto_cpp/main/: CMakeLists.txt
presto-native-execution/presto_cpp/main/connectors/: CMakeLists.txt  Registration.cpp
presto-native-execution/presto_cpp/main/connectors/arrow_flight/: ArrowFlightConnector.cpp
presto-native-execution/presto_cpp/main/connectors/denodo_arrow/: CMakeLists.txt  DenodoArrowFlightConfig.cpp  DenodoArrowFlightConfig.h  DenodoCallOptions.h  (+16 more)
presto-native-execution/presto_cpp/main/connectors/denodo_arrow/tests/: CMakeLists.txt  DenodoArrowFlightConfigTest.cpp
presto-native-execution/presto_cpp/presto_protocol/: Makefile  presto_protocol.cpp  presto_protocol.yml
presto-native-execution/presto_cpp/presto_protocol/core/: presto_protocol_core.yml
presto-native-execution/scripts/: setup-adapters.sh
presto-native-execution/scripts/dockerfiles/: ubi-dependency.dockerfile  ubi-prestissimo-runtime.dockerfile
(+75 files in other folders)
